kubernetes/charts/testing/nginx/nginx-traefik-cert-test/rc-server/nginx-traefik-cert-test-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.rc-server.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.rc-server.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: rc-server-production-tls
